circt-bc260128-00000aa3/origin/stage2.err
stage1.mlir:85:11: error: 'arc.state' op operand type mismatch: operand #2
    %35 = comb.mux bin %34#1, %34#0, %arr : !hw.array<16xi8>
          ^
stage1.mlir:85:11: note: see current operation: %4 = "arc.state"(%5, %0#1, %2, %0#0, %3) <{arc = @array_reg_arc_0, latency = 1 : i32, operandSegmentSizes = array<i32: 1, 1, 0, 3, 0>}> : (!seq.clock, i1, i1, !hw.array<16xi8>, i747108752) -> !hw.array<16xi8>
stage1.mlir:85:11: note: expected type: '!hw.array<16xi8>'
stage1.mlir:85:11: note:   actual type: 'i747108752'
